areas-page finalizada

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./src/css/footer.css">
     <link rel="stylesheet" href="./src/css/home-moba.css">
 
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <!--HEADER-->
@@ -181,6 +181,7 @@
         </section>
 
 
+        <!--footer-->
         <footer class="footer w-full py-[60px]">
             <div class="max-w-[1280px] mx-auto">
                 <ul class="footer-cont flex justify-between items-center">
@@ -220,7 +221,7 @@
                             <li><a href="#top" class="texto">Home</a></li>
                             <li><a href="#escritorio" class="texto">Escritório</a></li>
                             <li><a href="" class="texto">Sobre</a></li>
-                            <li><a href="" class="texto">Áreas de atuação</a></li>
+                            <li><a href="./areas.html" class="texto">Áreas de atuação</a></li>
                             <li><a href="" class="texto">Blog</a></li>
                             <li><a href="" class="texto">Contato</a></li>
                         </ul>
