ajuste de imagem (responsive-guia-img)

--- a/areas.html
+++ b/areas.html
@@ -63,7 +63,7 @@
     <!--MAIN-->
     <main id="top">
         <!--img escritório-->
-        <div class="resposive-img w-full h-[500px] flex-shrink-0 relative">
+        <div class="resposive-guia-img w-full h-[500px] flex-shrink-0 relative">
             <img 
                 src="./src/img/areas-de-atuação.png" 
                 alt="Imagem do Slide" 
