adição href para nav (header)

--- a/areas.html
+++ b/areas.html
@@ -36,9 +36,9 @@
             
             <nav class="flex moba-hidden hidden lg:flex"> 
                 <ul class="flex gap-5">
-                    <li><a href="#top" class="texto">HOME</a></li>
+                    <li><a href="./home.html" class="texto">HOME</a></li>
                     <li><a href="#sobre" class="texto">SOBRE</a></li>
-                    <li><a href="#escritorio" class="texto">ESCRITÓRIO</a></li>
+                    <li><a href="#top" class="texto">ESCRITÓRIO</a></li>
                     <li><a href="#areas" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li><a href="#blog" class="texto">BLOG</a></li>
                     <li><a href="#contato" class="texto">CONTATO</a></li>
@@ -49,9 +49,9 @@
             <nav class="mobile-nav relative">
                             <button id="menu-close" class="close-button absolute top-[-60px] right-[-30px]"><i class="bi bi-x"></i></button>
                 <ul id="mobile-nav-list" class="flex flex-col gap-7">
-                    <li class="w-[200px] flex justify-center"><a href="#top" class="texto">HOME</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./home.html" class="texto">HOME</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">SOBRE</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="#escritorio" class="texto">ESCRITÓRIO</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="#top" class="texto">ESCRITÓRIO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">BLOG</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">CONTATO</a></li>
