--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                     <li><a href="#top" class="texto">HOME</a></li>
                     <li><a href="#sobre" class="texto">SOBRE</a></li>
                     <li><a href="#escritorio" class="texto">ESCRITÓRIO</a></li>
-                    <li><a href="#areas" class="texto">ÁREAS DE ATUAÇÃO</a></li>
+                    <li><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li><a href="#blog" class="texto">BLOG</a></li>
                     <li><a href="#contato" class="texto">CONTATO</a></li>
                 </ul>
@@ -51,7 +51,7 @@
                     <li class="w-[200px] flex justify-center"><a href="#top" class="texto">HOME</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">SOBRE</a></li>
                     <li class="w-[200px] flex justify-center"><a href="#escritorio" class="texto">ESCRITÓRIO</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">ÁREAS DE ATUAÇÃO</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">BLOG</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">CONTATO</a></li>
                 </ul>
