contato-page finalizada

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                     <li><a href="#escritorio" class="texto">ESCRITÓRIO</a></li>
                     <li><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li><a href="#blog" class="texto">BLOG</a></li>
-                    <li><a href="#contato" class="texto">CONTATO</a></li>
+                    <li><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
         </div>
@@ -53,7 +53,7 @@
                     <li class="w-[200px] flex justify-center"><a href="#escritorio" class="texto">ESCRITÓRIO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">BLOG</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">CONTATO</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
         </div>
@@ -223,7 +223,7 @@
                             <li><a href="" class="texto">Sobre</a></li>
                             <li><a href="./areas.html" class="texto">Áreas de atuação</a></li>
                             <li><a href="" class="texto">Blog</a></li>
-                            <li><a href="" class="texto">Contato</a></li>
+                            <li><a href="./contato.html" class="texto">Contato</a></li>
                         </ul>
                     </li>
                 </ul>
