--- a/areas.html
+++ b/areas.html
@@ -26,7 +26,7 @@
 <body>
     <!--HEADER-->
     <header class="header z-10 w-full z-1000 h-[99px] self-center">
-        <div class="flex justify-between mx-auto max-w-[1280px] items-center py-4 h-full px-4 lg:px-0">
+        <div class="flex justify-between mx-auto max-w-[1280px] items-center py-4 h-full">
             
             <img class="logo h-[50px] w-auto" src="./src/img/logo-light.png" alt="Logo Padilha Advogados">
             
@@ -37,11 +37,11 @@
             <nav class="flex moba-hidden hidden lg:flex"> 
                 <ul class="flex gap-5">
                     <li><a href="./home.html" class="texto">HOME</a></li>
-                    <li><a href="#sobre" class="texto">SOBRE</a></li>
-                    <li><a href="#top" class="texto">ESCRITÓRIO</a></li>
-                    <li><a href="#areas" class="texto">ÁREAS DE ATUAÇÃO</a></li>
+                    <li><a href="./sobre.html" class="texto">SOBRE</a></li>
+                    <li><a href="./home.html#escritorio" class="texto">ESCRITÓRIO</a></li>
+                    <li><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li><a href="#blog" class="texto">BLOG</a></li>
-                    <li><a href="#contato" class="texto">CONTATO</a></li>
+                    <li><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
         </div>
@@ -50,11 +50,11 @@
                             <button id="menu-close" class="close-button absolute top-[-60px] right-[-30px]"><i class="bi bi-x"></i></button>
                 <ul id="mobile-nav-list" class="flex flex-col gap-7">
                     <li class="w-[200px] flex justify-center"><a href="./home.html" class="texto">HOME</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">SOBRE</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="#top" class="texto">ESCRITÓRIO</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">ÁREAS DE ATUAÇÃO</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./sobre.html" class="texto">SOBRE</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./home.html#escritorio" class="texto">ESCRITÓRIO</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="" class="texto">BLOG</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">CONTATO</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
         </div>
@@ -112,57 +112,56 @@
                 </div>
             </section>
         </section>
+
+        <!--footer-->
+        <footer class="footer w-full py-[60px]">
+            <div class="max-w-[1280px] mx-auto">
+                <ul class="footer-cont flex justify-between items-center">
+                    <li class="footer-sec flex flex-col w-[300px] justify-start gap-[29px]">
+                        <img class="logo h-[50px] w-auto self-start" src="./src/img/logo-light.png" alt="">
+                        <p class="texto">Somos uma firma jurídica que visa sempre a excelência e o atendimento individualizado de cada uma das demandas de nossos clientes, tendo como marca maior a alta performance jurídica. Conheça nosso trabalho.</p>
+                        <ul class="flex gap-5">
+                            <li class="icon"><a href=""><i class="bi bi-linkedin"></i></a></li>
+                            <li class="icon"><a href=""><i class="bi bi-instagram"></i></a></li>
+                            <li class="icon"><a href=""><i class="bi bi-whatsapp"></i></a></li>
+                        </ul>
+                    </li>
+                    <li class="footer-sec contato flex flex-col w-[300px] justify-start gap-[29px]">
+                        <h2 class="subtitulo">Contato</h2>
+                        <ul class="flex flex-col gap-[15px]">
+                            <li class="icon flex gap-7 items-center">
+                                <i class="bi bi-globe text-lg"></i>
+                                <p class="texto">R. Dep. Elizeu Teixeira, 555, Ponta Verde - Sala 301. Empresarial José Lages</p>
+                            </li>
+                            <li class="icon flex gap-7 items-center">
+                                <i class="bi bi-telephone text-lg"></i>
+                                <p class="texto">+55 82 981841016</p>
+                            </li>
+                            <li class="icon flex gap-7 items-center">
+                                <i class="bi bi-envelope text-lg"></i>
+                                <p class="texto">contato@padilhadvogados.com.br</p>
+                            </li>
+                            <li class="icon flex gap-7 items-center">
+                                <i class="bi bi-clock text-lg"></i>
+                                <p class="texto">Segunda - Sexta: 08:00 - 18:00</p>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer-sec navegação flex flex-col w-[300px] justify-start gap-[29px]">
+                        <h2 class="subtitulo">Navegação</h2>
+                        <ul class="flex flex-col gap-[15px]">
+                            <li><a href="./home.html" class="texto">Home</a></li>
+                            <li><a href="./home.html#escritorio" class="texto">Escritório</a></li>
+                            <li><a href="./sobre.html" class="texto">Sobre</a></li>
+                            <li><a href="./areas.html" class="texto">Áreas de atuação</a></li>
+                            <li><a href="" class="texto">Blog</a></li>
+                            <li><a href="./contato.html" class="texto">Contato</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </footer>
     </main>
-
-
-    <!--footer-->
-    <footer class="footer w-full py-[60px]">
-        <div class="max-w-[1280px] mx-auto">
-            <ul class="footer-cont flex justify-between items-center">
-                <li class="footer-sec flex flex-col w-[300px] justify-start gap-[29px]">
-                    <img class="logo h-[50px] w-auto self-start" src="./src/img/logo-light.png" alt="">
-                    <p class="texto">Somos uma firma jurídica que visa sempre a excelência e o atendimento individualizado de cada uma das demandas de nossos clientes, tendo como marca maior a alta performance jurídica. Conheça nosso trabalho.</p>
-                    <ul class="flex gap-5">
-                        <li class="icon"><a href=""><i class="bi bi-linkedin"></i></a></li>
-                        <li class="icon"><a href=""><i class="bi bi-instagram"></i></a></li>
-                        <li class="icon"><a href=""><i class="bi bi-whatsapp"></i></a></li>
-                    </ul>
-                </li>
-                <li class="footer-sec contato flex flex-col w-[300px] justify-start gap-[29px]">
-                    <h2 class="subtitulo">Contato</h2>
-                    <ul class="flex flex-col gap-[15px]">
-                        <li class="icon flex gap-7 items-center">
-                            <i class="bi bi-globe text-lg"></i>
-                            <p class="texto">R. Dep. Elizeu Teixeira, 555, Ponta Verde - Sala 301. Empresarial José Lages</p>
-                        </li>
-                        <li class="icon flex gap-7 items-center">
-                            <i class="bi bi-telephone text-lg"></i>
-                            <p class="texto">+55 82 981841016</p>
-                        </li>
-                        <li class="icon flex gap-7 items-center">
-                            <i class="bi bi-envelope text-lg"></i>
-                            <p class="texto">contato@padilhadvogados.com.br</p>
-                        </li>
-                        <li class="icon flex gap-7 items-center">
-                            <i class="bi bi-clock text-lg"></i>
-                            <p class="texto">Segunda - Sexta: 08:00 - 18:00</p>
-                        </li>
-                    </ul>
-                </li>
-                <li class="footer-sec navegação flex flex-col w-[300px] justify-start gap-[29px]">
-                    <h2 class="subtitulo">Navegação</h2>
-                    <ul class="flex flex-col gap-[15px]">
-                        <li><a href="./home.html" class="texto">Home</a></li>
-                        <li><a href="#escritorio" class="texto">Escritório</a></li>
-                        <li><a href="" class="texto">Sobre</a></li>
-                        <li><a href="" class="texto">Áreas de atuação</a></li>
-                        <li><a href="" class="texto">Blog</a></li>
-                        <li><a href="" class="texto">Contato</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </footer>
 
 <script src="./src/js/header.js"></script>
 </body>
