só falta o blog (em breve)

--- a/areas.html
+++ b/areas.html
@@ -38,9 +38,8 @@
                 <ul class="flex gap-5">
                     <li><a href="./home.html" class="texto">HOME</a></li>
                     <li><a href="./sobre.html" class="texto">SOBRE</a></li>
-                    <li><a href="./home.html#escritorio" class="texto">ESCRITÓRIO</a></li>
                     <li><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
-                    <li><a href="#blog" class="texto">BLOG</a></li>
+                    <li><a href="./blog.html" class="texto">BLOG</a></li>
                     <li><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
@@ -51,9 +50,8 @@
                 <ul id="mobile-nav-list" class="flex flex-col gap-7">
                     <li class="w-[200px] flex justify-center"><a href="./home.html" class="texto">HOME</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./sobre.html" class="texto">SOBRE</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="./home.html#escritorio" class="texto">ESCRITÓRIO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">BLOG</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./blog.html" class="texto">BLOG</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
@@ -73,95 +71,83 @@
         <section class="w-full areas-page">
             <section class="areas flex max-w-[1280px] mx-auto">
                 <div class="areas-sec flex flex-wrap justify-between w-full gap-8 items-center">
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
-                    <div class="area-info h-[258px]! w-[370px] px-[29px] py-[20px]">
-                        <h3 class="subtitulo">Direito Processual Civil</h3>
-                        <p class="texto">Representamos clientes em litígios nas áreas civil, comercial, societária, administrativa, familiar e tributária, em todas as instâncias, com especial atuação perante o Superior Tribunal de Justiça e o Supremo Tribunal Federal. O escritório tem forte experiência em ações coletivas, bancárias e de direito do consumidor.</p>
-                    </div>
+                        
+                        <div class="area-info h-[320px]! lg:w-[370px]! overflow-hidden px-[29px] py-[20px] swiper-slide">
+                            <h3 class="subtitulo pb-3">Direito Digital</h3>
+                            <p class="texto">Atuamos na proteção jurídica de negócios e pessoas no ambiente on-line. Cuidamos de temas como privacidade e proteção de dados (LGPD), contratos digitais, responsabilidade civil na internet, governança tecnológica e litígios virtuais.
+                            Nosso objetivo é garantir que você e sua empresa estejam juridicamente seguros em um mundo cada vez mais conectado.
+                            </p>
+                        </div>
+                        <div class="area-info h-[320px]! lg:w-[370px]! overflow-hidden px-[29px] py-[20px] swiper-slide">
+                            <h3 class="subtitulo pb-3">Registro de Marcas e Patentes</h3>
+                            <p class="texto">Sua marca é um dos maiores ativos do seu negócio — e merece estar protegida. Realizamos todo o processo de busca, registro e acompanhamento de marcas e patentes, assegurando exclusividade e segurança jurídica.
+                            Com uma equipe experiente, atuamos desde a fase de pesquisa até a defesa administrativa e judicial de seus direitos de propriedade intelectual.
+                            </p>
+                        </div>                        
+                        <div class="area-info h-[320px]! lg:w-[370px]! overflow-hidden px-[29px] py-[20px] swiper-slide">
+                            <h3 class="subtitulo pb-3">Direito Empresarial</h3>
+                            <p class="texto">Oferecemos suporte jurídico completo para empresas em todas as etapas de crescimento. Atuamos em constituição e estruturação societária, elaboração e revisão de contratos, governança corporativa, fusões e aquisições, e prevenção de conflitos empresariais.
+                            Nosso foco é proporcionar segurança jurídica e eficiência operacional, contribuindo para o desenvolvimento sustentável dos negócios de nossos clientes.
+                            </p>
+                        </div>                        
+                        <div class="area-info h-[320px]! lg:w-[370px]! overflow-hidden px-[29px] py-[20px] swiper-slide">
+                            <h3 class="subtitulo pb-3">Direito Eleitoral</h3>
+                            <p class="texto">Com atuação estratégica e ética, assessoramos candidatos, partidos e coligações em todas as fases do processo eleitoral.
+                            Realizamos registro de candidaturas, análise de elegibilidade, prestação de contas, consultoria em marketing político e defesa em processos eleitorais.
+                            Nosso trabalho é garantir conformidade legal, segurança e tranquilidade durante todo o período eleitoral.</p>
+                        </div>    
                 </div>
             </section>
         </section>
-
-        <!--footer-->
-        <footer class="footer w-full py-[60px]">
-            <div class="max-w-[1280px] mx-auto">
-                <ul class="footer-cont flex justify-between items-center">
-                    <li class="footer-sec flex flex-col w-[300px] justify-start gap-[29px]">
-                        <img class="logo h-[50px] w-auto self-start" src="./src/img/logo-light.png" alt="">
-                        <p class="texto">Somos uma firma jurídica que visa sempre a excelência e o atendimento individualizado de cada uma das demandas de nossos clientes, tendo como marca maior a alta performance jurídica. Conheça nosso trabalho.</p>
-                        <ul class="flex gap-5">
-                            <li class="icon"><a href=""><i class="bi bi-linkedin"></i></a></li>
-                            <li class="icon"><a href=""><i class="bi bi-instagram"></i></a></li>
-                            <li class="icon"><a href=""><i class="bi bi-whatsapp"></i></a></li>
-                        </ul>
-                    </li>
-                    <li class="footer-sec contato flex flex-col w-[300px] justify-start gap-[29px]">
-                        <h2 class="subtitulo">Contato</h2>
-                        <ul class="flex flex-col gap-[15px]">
-                            <li class="icon flex gap-7 items-center">
-                                <i class="bi bi-globe text-lg"></i>
-                                <p class="texto">R. Dep. Elizeu Teixeira, 555, Ponta Verde - Sala 301. Empresarial José Lages</p>
-                            </li>
-                            <li class="icon flex gap-7 items-center">
-                                <i class="bi bi-telephone text-lg"></i>
-                                <p class="texto">+55 82 981841016</p>
-                            </li>
-                            <li class="icon flex gap-7 items-center">
-                                <i class="bi bi-envelope text-lg"></i>
-                                <p class="texto">contato@padilhadvogados.com.br</p>
-                            </li>
-                            <li class="icon flex gap-7 items-center">
-                                <i class="bi bi-clock text-lg"></i>
-                                <p class="texto">Segunda - Sexta: 08:00 - 18:00</p>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="footer-sec navegação flex flex-col w-[300px] justify-start gap-[29px]">
-                        <h2 class="subtitulo">Navegação</h2>
-                        <ul class="flex flex-col gap-[15px]">
-                            <li><a href="./home.html" class="texto">Home</a></li>
-                            <li><a href="./home.html#escritorio" class="texto">Escritório</a></li>
-                            <li><a href="./sobre.html" class="texto">Sobre</a></li>
-                            <li><a href="./areas.html" class="texto">Áreas de atuação</a></li>
-                            <li><a href="" class="texto">Blog</a></li>
-                            <li><a href="./contato.html" class="texto">Contato</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </footer>
     </main>
+<!--footer-->
+    <footer class="footer w-full py-[60px]">
+        <div class="max-w-[1280px] mx-auto">
+            <ul class="footer-cont flex justify-between items-center">
+                <li class="footer-sec flex flex-col w-[300px] justify-start gap-[29px]">
+                    <img class="logo h-[50px] w-auto self-start" src="./src/img/logo-light.png" alt="">
+                    <p class="texto">Somos uma firma jurídica que visa sempre a excelência e o atendimento individualizado de cada uma das demandas de nossos clientes, tendo como marca maior a alta performance jurídica. Conheça nosso trabalho.</p>
+                    <ul class="flex gap-5">
+                        <li class="icon"><a href=""><i class="bi bi-linkedin"></i></a></li>
+                        <li class="icon"><a href=""><i class="bi bi-instagram"></i></a></li>
+                        <li class="icon"><a href=""><i class="bi bi-whatsapp"></i></a></li>
+                    </ul>
+                </li>
+                <li class="footer-sec contato flex flex-col w-[300px] justify-start gap-[29px]">
+                    <h2 class="subtitulo">Contato</h2>
+                    <ul class="flex flex-col gap-[15px]">
+                        <li class="icon flex gap-7 items-center">
+                            <i class="bi bi-globe text-lg"></i>
+                            <p class="texto">R. Dep. Elizeu Teixeira, 555, Ponta Verde - Sala 301. Empresarial José Lages</p>
+                        </li>
+                        <li class="icon flex gap-7 items-center">
+                            <i class="bi bi-telephone text-lg"></i>
+                            <p class="texto">+55 82 981841016</p>
+                        </li>
+                        <li class="icon flex gap-7 items-center">
+                            <i class="bi bi-envelope text-lg"></i>
+                            <p class="texto">contato@padilhadvogados.com.br</p>
+                        </li>
+                        <li class="icon flex gap-7 items-center">
+                            <i class="bi bi-clock text-lg"></i>
+                            <p class="texto">Segunda - Sexta: 08:00 - 18:00</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-sec navegação flex flex-col w-[300px] justify-start gap-[29px]">
+                    <h2 class="subtitulo">Navegação</h2>
+                    <ul class="flex flex-col gap-[15px]">
+                        <li><a href="./home.html" class="texto">Home</a></li>
+                        <li><a href="./sobre.html" class="texto">Sobre</a></li>
+                        <li><a href="./areas.html" class="texto">Áreas de atuação</a></li>
+                        <li><a href="./blog.html" class="texto">Blog</a></li>
+                        <li><a href="./contato.html" class="texto">Contato</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
 <script src="./src/js/header.js"></script>
 </body>
+</html>
