--- a/sobre.html
+++ b/sobre.html
@@ -40,9 +40,8 @@
                 <ul class="flex gap-5">
                     <li><a href="./home.html" class="texto">HOME</a></li>
                     <li><a href="./sobre.html" class="texto">SOBRE</a></li>
-                    <li><a href="./home.html#escritorio" class="texto">ESCRITÓRIO</a></li>
                     <li><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
-                    <li><a href="#blog" class="texto">BLOG</a></li>
+                    <li><a href="./blog.html" class="texto">BLOG</a></li>
                     <li><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
@@ -53,9 +52,8 @@
                 <ul id="mobile-nav-list" class="flex flex-col gap-7">
                     <li class="w-[200px] flex justify-center"><a href="./home.html" class="texto">HOME</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./sobre.html" class="texto">SOBRE</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="./home.html#escritorio" class="texto">ESCRITÓRIO</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./areas.html" class="texto">ÁREAS DE ATUAÇÃO</a></li>
-                    <li class="w-[200px] flex justify-center"><a href="" class="texto">BLOG</a></li>
+                    <li class="w-[200px] flex justify-center"><a href="./blog.html" class="texto">BLOG</a></li>
                     <li class="w-[200px] flex justify-center"><a href="./contato.html" class="texto">CONTATO</a></li>
                 </ul>
             </nav>
@@ -86,10 +84,10 @@
                     
                     <div class="w-full lg:w-[600px]">
                         <p class="texto text-white mb-6">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            A Padilha Advocacia e Consultoria nasceu com o propósito de oferecer soluções criativas e eficazes para os desafios jurídicos de seus clientes, unindo a modernidade tecnológica às tradições do direito. Fundada por três irmãos, a equipe sempre se destacou pela escuta ativa, atendimento humanizado e personalização de cada demanda.
                         </p>
                         <p class="texto text-white">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            O escritório evoluiu de uma assessoria tradicional para uma estrutura moderna, adotando métodos inovadores e gestão individualizada. Hoje, atua com excelência em soluções judiciais e extrajudiciais, buscando agilidade, eficiência e resultados duradouros. Acreditamos que modernidade e tradição se complementam, e nossa missão é garantir a máxima satisfação e segurança jurídica a cada cliente.
                         </p>
                     </div>
                 </div>
@@ -140,7 +138,7 @@
                     </div>
                     
                     <div class="w-full lg:w-[600px]">
-                        <h3 class="subtitulo text-black mb-2">Jonathan</h3>
+                        <h3 class="subtitulo text-black mb-2">Daniel Padilha</h3>
                         <p class="texto-medio text-black">
                             Daniel Padilha Vilanova, sócio-fundador e especialista em Direito Processual Civil pelo IDP. Atua com ênfase na resolução de conflitos complexos e na mitigação de riscos empresariais e institucionais.
                         </p>
@@ -156,7 +154,7 @@
     </main>
 
 
-    <!--footer-->
+<!--footer-->
     <footer class="footer w-full py-[60px]">
         <div class="max-w-[1280px] mx-auto">
             <ul class="footer-cont flex justify-between items-center">
@@ -194,10 +192,9 @@
                     <h2 class="subtitulo">Navegação</h2>
                     <ul class="flex flex-col gap-[15px]">
                         <li><a href="./home.html" class="texto">Home</a></li>
-                        <li><a href="./home.html#escritorio" class="texto">Escritório</a></li>
                         <li><a href="./sobre.html" class="texto">Sobre</a></li>
                         <li><a href="./areas.html" class="texto">Áreas de atuação</a></li>
-                        <li><a href="" class="texto">Blog</a></li>
+                        <li><a href="./blog.html" class="texto">Blog</a></li>
                         <li><a href="./contato.html" class="texto">Contato</a></li>
                     </ul>
                 </li>
@@ -207,3 +204,4 @@
 
 <script src="./src/js/header.js"></script>
 </body>
+</html>
