--- a/areas.html
+++ b/areas.html
@@ -28,7 +28,7 @@
     <header class="header z-10 w-full z-1000 h-[99px] self-center">
         <div class="flex justify-between mx-auto max-w-[1280px] items-center py-4 h-full">
             
-            <img class="logo h-[50px] w-auto" src="./src/img/logo-light.png" alt="Logo Padilha Advogados">
+            <img class="logo h-[50px] w-auto" src="./src/img/logo/logo-light.png" alt="Logo Padilha Advogados">
             
             <button id="menu-toggle" class="lg:hidden text-2xl p-2 z-2000 text-white">
                 <i class="bi bi-list"></i> 
@@ -63,7 +63,7 @@
         <!--img escritório-->
         <div class="resposive-guia-img w-full h-[500px] flex-shrink-0 relative">
             <img 
-                src="./src/img/areas-de-atuação.png" 
+                src="./src/img/paginas/areas-de-atuação.jpg" 
                 alt="Imagem do Slide" 
                 class="absolute w-full h-full object-cover" 
             >
@@ -105,7 +105,7 @@
         <div class="max-w-[1280px] mx-auto">
             <ul class="footer-cont flex justify-between items-center">
                 <li class="footer-sec flex flex-col w-[300px] justify-start gap-[29px]">
-                    <img class="logo h-[50px] w-auto self-start" src="./src/img/logo-light.png" alt="">
+                    <img class="logo h-[50px] w-auto self-start" src="./src/img/logo/logo-light.png" alt="">
                     <p class="texto">Somos uma firma jurídica que visa sempre a excelência e o atendimento individualizado de cada uma das demandas de nossos clientes, tendo como marca maior a alta performance jurídica. Conheça nosso trabalho.</p>
                     <ul class="flex gap-5">
                         <li class="icon"><a href=""><i class="bi bi-linkedin"></i></a></li>
