--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
     <header class="header z-10 w-full z-1000 h-[99px] self-center">
         <div class="flex justify-between mx-auto max-w-[1280px] items-center py-4 h-full">
             
-            <img class="logo h-[50px] w-auto" src="./src/img/logo-light.png" alt="Logo Padilha Advogados">
+            <img class="logo h-[50px] w-auto" src="./src/img/logo/logo-light.png" alt="Logo Padilha Advogados">
             
             <button id="menu-toggle" class="lg:hidden text-2xl p-2 z-2000 text-white">
                 <i class="bi bi-list"></i> 
@@ -64,7 +64,7 @@
         <!--img escritório-->
         <div class="resposive-guia-img w-full h-[500px] flex-shrink-0 relative">
             <img 
-                src="./src/img/blog.png" 
+                src="./src/img/paginas/blog.jpg" 
                 alt="Imagem do Slide" 
                 class="absolute w-full h-full object-cover" 
             >
