--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./src/css/areas.css">
     <link rel="stylesheet" href="./src/css/footer.css">
     <link rel="stylesheet" href="./src/css/home-moba.css">
+    <link rel="stylesheet" href="./src/css/carrossel.css">
 
     <title>Home</title>
 </head>
@@ -27,7 +28,7 @@
     <header class="header z-10 w-full z-1000 h-[99px] self-center">
         <div class="flex justify-between mx-auto max-w-[1280px] items-center py-4 h-full">
             
-            <img class="logo h-[50px] w-auto" src="./src/img/logo-light.png" alt="Logo Padilha Advogados">
+            <img class="logo h-[50px] w-auto" src="./src/img/logo/logo-light.png" alt="Logo Padilha Advogados">
             
             <button id="menu-toggle" class="lg:hidden text-2xl p-2 z-2000 text-white">
                 <i class="bi bi-list"></i> 
@@ -62,27 +63,40 @@
     <!--MAIN-->
     <main id="top">
         <!--carousel-->
-        <section class="relative w-full overflow-hidden">
+        <section class="carrossel relative w-full overflow-hidden">
+            <div 
+                id="splash-slide"
+                class="absolute inset-0 z-50 bg-gray-900 transition-opacity duration-[1000ms] ease-in-out"
+            >
+                <div class="absolute animate-fade-slide top-1/2 left-1/2  text-center text-white flex flex-col gap-6 w-full max-w-4xl px-4">
+                    <img class="logo w-[400px] w-auto self-center" src="./src/img/logo/logo-light.png" alt="Logo de Abertura">
+                    <p class="subtitulo">A Tradição do Direito, a Velocidade da Solução.</p>
+                </div>
+            </div>
+
             <div class=" flex transition-transform duration-[1000ms] ease-in-out" id="carousel">
                 <div class="resposive-img w-full h-[500px] flex-shrink-0 relative">
                     <img 
-                        src="./src/img/padilha/img1.PNG" 
+                        src="./src/img/carrossel/img1.jpg" 
                         alt="Imagem do Slide" 
                         class="absolute w-full h-full object-cover" 
+                        loading="lazy"
                     >
                 </div>
                 <div class="resposive-img w-full h-[500px] flex-shrink-0 relative">
                     <img 
-                        src="./src/img/padilha/img2.PNG" 
+                        src="./src/img/carrossel/img2.jpg" 
                         alt="Imagem do Slide" 
-                        class="absolute w-full h-full object-cover" 
+                        class="absolute w-full h-full object-cover object-center" 
+                        loading="lazy"
                     >
                 </div>
                 <div class="resposive-img w-full h-[500px] flex-shrink-0 relative">
                     <img 
-                        src="./src/img/padilha/img3.PNG" 
+                        src="./src/img/carrossel/img3.jpg" 
                         alt="Imagem do Slide" 
                         class="absolute w-full h-full object-cover" 
+                        loading="lazy"
                     >
                 </div>
             </div>
@@ -92,7 +106,7 @@
         <section id="escritorio" class="escritorio py-[60px] w-full">
             <div class="max-w-[1280px] flex flex-col mx-auto text-center gap-[25px]">
                 <h2 class="titulo">Escritório</h2>
-                <p class="subtitulo text-justify">O Padilha advocacia e consultoria foi fundado por Fellipe, Daniel e João Padilha, três profissionais movidos pelo propósito de oferecer um novo padrão de advocacia moderna, estratégica e próxima do cliente.
+                <p class="subtitulo">O Padilha advocacia e consultoria foi fundado por Fellipe, Daniel e João Padilha, três profissionais movidos pelo propósito de oferecer um novo padrão de advocacia moderna, estratégica e próxima do cliente.
                                                     Unindo experiência jurídica, visão empreendedora e atenção aos detalhes, o escritório atua com ética, agilidade e foco em resultados reais. Nosso compromisso é transformar o Direito em um instrumento de crescimento, proteção e inovação para pessoas e empresas.</p>
             </div>
         </section>
@@ -100,16 +114,10 @@
         <!--img escritório-->
         <div class="resposive-img w-full h-[500px] flex-shrink-0 relative">
             <img 
-                src="./src/img/escritorio-empresa.jpg" 
+                src="./src/img/extra/escritorio.jpg" 
                 alt="Imagem do Slide" 
-                class="absolute w-full h-full object-cover" 
+                class="absolute w-full h-full object-cover object-bottom" 
             >
-
-            <!--apagar isso quando tiver a imagem do escritório-->
-            <span class="absolute text-white left-[100px] ">
-                IMAGEM ILUSTRATIVA
-            </span>
-            <!---------------------------------------------------->
         </div>
 
         <!--advogados section-->
@@ -119,21 +127,21 @@
                 <ul class="max-w-[1280px] flex justify-between mx-auto">
                     <!--advogados li-->
                     <li class="advogado flex flex-col items-center text-center gap-[30px]">
-                        <div class="bg-sky-400 h-[190px] w-[190px] rounded-full overflow-hidden drop-shadow-lg"><img class="w-full h-full object-cover" src="./src/img/advogado-1.webp" alt=""></div>
+                        <div class="bg-sky-400 h-[190px] w-[190px] rounded-full overflow-hidden drop-shadow-lg"><img class="w-full h-full object-cover" src="./src/img/advogados/advogado-1.webp" alt=""></div>
                         <div>
                             <h3 class="subtitulo">João Padilha</h3>
                             <p>OAB/AL</p>
                         </div>
                     </li>
                     <li class="advogado flex flex-col items-center text-center gap-[30px]">
-                        <div class="bg-sky-400 h-[190px] w-[190px] rounded-full overflow-hidden drop-shadow-lg"><img class="w-full h-full object-cover" src="./src/img/advogado-2.webp" alt=""></div>
+                        <div class="bg-sky-400 h-[190px] w-[190px] rounded-full overflow-hidden drop-shadow-lg"><img class="w-full h-full object-cover" src="./src/img/advogados/advogado-2.webp" alt=""></div>
                         <div>
                             <h3 class="subtitulo">Felipe Padilha</h3>
                             <p>OAB/AL</p>
                         </div>
                     </li>
                     <li class="advogado flex flex-col items-center text-center gap-[30px]">
-                        <div class="bg-sky-400 h-[190px] w-[190px] rounded-full overflow-hidden drop-shadow-lg"><img class="w-full h-full object-cover" src="./src/img/advogado-3.webp" alt=""></div>
+                        <div class="bg-sky-400 h-[190px] w-[190px] rounded-full overflow-hidden drop-shadow-lg"><img class="w-full h-full object-cover" src="./src/img/advogados/advogado-3.webp" alt=""></div>
                         <div>
                             <h3 class="subtitulo">Daniel Padilha</h3>
                             <p>OAB/AL</p>
@@ -189,7 +197,7 @@
         <div class="max-w-[1280px] mx-auto">
             <ul class="footer-cont flex justify-between items-center">
                 <li class="footer-sec flex flex-col w-[300px] justify-start gap-[29px]">
-                    <img class="logo h-[50px] w-auto self-start" src="./src/img/logo-light.png" alt="">
+                    <img class="logo h-[50px] w-auto self-start" src="./src/img/logo/logo-light.png" alt="">
                     <p class="texto">Somos uma firma jurídica que visa sempre a excelência e o atendimento individualizado de cada uma das demandas de nossos clientes, tendo como marca maior a alta performance jurídica. Conheça nosso trabalho.</p>
                     <ul class="flex gap-5">
                         <li class="icon"><a href=""><i class="bi bi-linkedin"></i></a></li>
